# clipboard-transfer

./: README.md  pyproject.toml
go/: go.mod  main.go  test_e2e.sh
go/cmd/: client.go  echo.go  root.go  server.go
go/internal/clipboard/: clipboard.go  clipboard_test.go
go/internal/crypto/: crypto.go  crypto_test.go
go/internal/transfer/: transfer.go  transfer_test.go
src/clipboard_transfer/: __main__.py
